--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,24 @@
 .images {
-    background-image: url(../assets2/landing\ image3.jpeg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    /* background-attachment: scroll;  */
-    background-size: cover;
-    height: 720px;
-    width: 100%;
-    text-align:center;
-    color: black;
-    font-size: 50px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-top: 20%;
-    
-  }
+  background-image: url(../assets2/landing\image3.jpeg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  /* background-attachment: scroll;  */
+  background-size: cover;
+  height: 720px;
+  width: 100%;
+  text-align: center;
+  color: black;
+  font-size: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 20%;
+}
 
 #contact {
   font-size: 30px;
   text-align: center;
 
   padding-top: 3%;
+}
+footer {
+  background-color: bisque;
 }
