this styles the ordered list in which the icons were listed

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,9 @@
 footer {
   background-color: bisque;
 }
+ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
