--- a/css/styles.css
+++ b/css/styles.css
@@ -51,4 +51,13 @@ ul {
   li{
     border-radius: px;
   }
+  #navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 15px;
+    text-decoration: none;
+    font-size: 17px;
+  }
  
