--- a/css/styles.css
+++ b/css/styles.css
@@ -60,4 +60,8 @@ ul {
     text-decoration: none;
     font-size: 17px;
   }
+  #navbar a:hover {
+    background-color: #ddd;
+    color:black;
+  }
  
