--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 table, th, td{
   border: 2px solid black;
 } 
+
+@media print {
+  * {
+    display: none;
+  }
+  #printableTable {
+    display: block;
+  }
+}
+#print{
+  display: none;
+}
