--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,15 @@ table, th, td{
 #print{
   display: none;
 }
+
+body {
+  background: url(../assets2/dd[1].png);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  position: relative;
+}
+table {
+  border: 25px double;
+}
