--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,28 @@
-table, th, td{
-  border: 2px solid black;
-} 
-
-@media print {
-  * {
-    display: none;
-  }
+table,
+th,
+td {
+    border: 2px solid black;
 }
 
-#print{
-  display: none;
+@media print {
+    * {
+        display: none;
+    }
+}
+
+#print {
+    display: none;
 }
 
 body {
-  background: url(../assets2/dd[1].png);
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  position: relative;
+    background: url(../assets2/dd[1].png);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    position: relative;
 }
+
 table {
-  border: 25px double;
+    background-color: white;
 }
